# skills

./: .gitignore  CLAUDE.md  Makefile  README.md  dist-workspace.toml  pyproject.toml  ubproject.toml
.claude-plugin/: plugin.json
.devcontainer/: devcontainer.json
.github/workflows/: publish-crates.yml  release.yml  rust.yml  spec.yml
cli/: Cargo.toml  README.md
cli/pds-cli/: Cargo.toml
cli/pds-cli/src/: main.rs
cli/pds-cli/tests/: cli.rs  version_lockstep.rs
cli/pds-core/: Cargo.toml
cli/pds-core/src/: builder.rs  checker.rs  config.rs  error.rs  lib.rs  lint.rs  needs.rs  outcome.rs  project.rs  queries.rs  retrieval.rs  verdicts.rs
cli/pds-core/tests/: needs_integration.rs
cli/pds-core/tests/fixtures/: needs-array-form.json  needs-object-form.json  real-repo-needs.json
docs/superpowers/plans/: 2026-06-07-pds-dedup-search.md  2026-06-07-pds-verdict-check.md  2026-06-08-pds-fingerprint-triage-verdicts.md
skills/: README.md
skills/decide/: SKILL.md
skills/diagnose/: SKILL.md
skills/grill-me/: SKILL.md
skills/grill-with-docs/: SKILL.md
skills/prototype/: SKILL.md
skills/qa/: SKILL.md
skills/review/: SKILL.md
skills/setup-patdhlk-skills/: REFERENCE.md  SKILL.md
skills/tdd/: SKILL.md
skills/to-issues/: SKILL.md
skills/to-prd/: SKILL.md
skills/triage/: SKILL.md
spec/: conf.py  glossary.rst  index.rst  schemas.json
spec/architecture/: index.rst
spec/features/: index.rst
spec/issues/: index.rst
spec/verdicts/: index.rst
