[workspace]
resolver = "3"
members = ["pds-core", "pds-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/patdhlk/skills"
keywords = ["sphinx-needs", "requirements", "traceability", "cli"]

[workspace.dependencies]
pds-core = { path = "pds-core", version = "0.1.0" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
