[package]
name = "pds-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pds"
path = "src/main.rs"

[dependencies]
pds-core = { path = "../pds-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
