[package]
name = "pds-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Gate-and-query CLI for sphinx-needs-backed repos — JSON-only stdout, exit 0/1/2 contract"
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
exclude = ["tests/version_lockstep.rs"]

[[bin]]
name = "pds"
path = "src/main.rs"

[dependencies]
pds-core.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pds-core = { workspace = true }
