[package]
name = "pds-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Library powering pds — sphinx-needs corpus gate-and-query primitives"
categories = ["development-tools"]
readme = "../README.md"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
